# standalone-nightowl

./: CMakeLists.txt  README.md  Readme.md  main.c  pico_sdk_import.cmake  pico_toolchain.cmake
docs/: pinout.md  troubleshooting.md  wiring.md
